--- a/index.html
+++ b/index.html
@@ -80,24 +80,12 @@
       <div class="line" id="2">Galeria</div>
 
       <div class="galeria">
-        <video muted loop autoplay>
-          <source src="Video1.mov">
-        </video>
-        <video muted loop autoplay>
-          <source src="Video2.mov">
-        </video>
-        <video muted loop autoplay>
-          <source src="Video3.mov">
-        </video>
-        <video muted loop autoplay>
-          <source src="Video4.mov">
-        </video>
-        <video muted loop autoplay>
-          <source src="Video5.mov">
-        </video>
-        <video muted loop autoplay>
-          <source src="Video6.mov">
-        </video>
+        <video src="Video1.mov" muted loop autoplay></video>
+        <video src="Video2.mov" muted loop autoplay></video>
+        <video src="Video3.mov" muted loop autoplay></video>
+        <video src="Video4.mov" muted loop autoplay></video>
+        <video src="Video5.mov" muted loop autoplay></video>
+        <video src="Video6.mov" muted loop autoplay></video>
         <img src="photo1.jpg" alt="photo">
         <img src="photo2.jpg" alt="photo">
         <img src="photo3.jpg" alt="photo">
@@ -110,18 +98,10 @@
         <img src="photo10.JPG" alt="photo">
         <img src="photo11.jpg" alt="photo">
         <img src="photo12.jpg" alt="photo">
-        <video muted loop autoplay>
-          <source src="Video7.mov">
-        </video>
-        <video muted loop autoplay>
-          <source  src="Video8.mov">
-        </video>
-        <video muted loop autoplay>
-          <source src="Video9.mov">
-        </video>
-        <video muted loop autoplay>
-          <source src="Video10.mov">
-        </video>
+        <video src="Video7.mov" muted loop autoplay></video>
+        <video src="Video8.mov" muted loop autoplay></video>
+        <video src="Video9.mov" muted loop autoplay></video>
+        <video src="Video10.mov" muted loop autoplay></video>
 
       </div>
 
