--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="main" >
         <div class="box photo1">
           <img src="dj-mixer.png" alt="dj-mixer">
-          <h2>Wyposarzenie </h2>
+          <h2>Wyposażenie </h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nobis ratione commodi corrupti architecto dignissimos, tempore esse accusamus qui omnis cum quasi libero nisi eum nostrum sint dicta voluptate at!</p>
         </div>
 
