--- a/index.html
+++ b/index.html
@@ -23,11 +23,8 @@
           <div class="text">
             <h2>DJ KLASER</h2> 
             <h3>TEN WIECZOR JEST NASZ</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
-            <a href="#">Explore</a>
+            <p>Profesionale prowadzenie imprez okolicznściowych, oprawa muzyczna</p>
+            <a href="#4">Kontakt</a>
           </div>
         </section>
 
@@ -40,25 +37,27 @@
         </div>
       </div>
 
-      <div class="line"></div>
+      <div class="line" id="4"></div>
       
       <div class="main" >
         <div class="box photo1">
           <img src="dj-mixer.png" alt="dj-mixer">
-          <h2>Wyposażenie </h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nobis ratione commodi corrupti architecto dignissimos, tempore esse accusamus qui omnis cum quasi libero nisi eum nostrum sint dicta voluptate at!</p>
+          <h2>Sperzęt</h2>
+          <p>Profesionalny sprzęt DENON-DJ</p>
+          <p>Ngłośnienie Turbosound IP3000</p>
+          <p>Oświetlenie Ligh4ME</p>
         </div>
 
         <div class="box photo2">
           <img src="disco-ball.png" alt="disco-ball">
           <h2>Impreza</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nobis ratione commodi corrupti architecto dignissimos, tempore esse accusamus qui omnis cum quasi libero nisi eum nostrum sint dicta voluptate at!</p>
+          <p>Dla Ciebie przygotuje plan imprezy, zgodnie z twoimi wytycznymi, perferencjami muzycznymi, by impreza pozostała w pamięci na wieki.</p>
         </div>
         
         <div class="box photo3">
-          <img src="party.png" alt="party">
-          <h2>Zabawy</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nobis ratione commodi corrupti architecto dignissimos, tempore esse accusamus qui omnis cum quasi libero nisi eum nostrum sint dicta voluptate at!</p>
+          <img src="wedding.png" alt="wedding-rings">
+          <h2>Wesela</h2>
+          <p>To magiczne wydarzenie wymaga szczególnej uwagi, dlatego poprawidzimy go dla Was w duecie. DJ KLASER & DJ SZPILKA.</p>
         </div>
       </div>
 
@@ -71,7 +70,7 @@
         </div>
           <div class="opis">
             <h1>O MNIE</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum id fuga debitis, iusto pariatur, unde sequi nulla consequuntur velit esse, aperiam odio delectus voluptas ullam quae veritatis accusantium soluta perspiciatis?</p>
+            <p>Dobra zabawa to całe moje życie </p>
             <br>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum id fuga debitis, iusto pariatur, unde sequi nulla consequuntur velit esse, aperiam odio delectus voluptas ullam quae veritatis accusantium soluta perspiciatis?</p>
           </div>
@@ -80,12 +79,12 @@
       <div class="line" id="2">Galeria</div>
 
       <div class="galeria">
-        <video src="Video1.mov" muted loop autoplay></video>
-        <video src="Video2.mov" muted loop autoplay></video>
-        <video src="Video3.mov" muted loop autoplay></video>
-        <video src="Video4.mov" muted loop autoplay></video>
-        <video src="Video5.mov" muted loop autoplay></video>
-        <video src="Video6.mov" muted loop autoplay></video>
+        <video src="Video1.mov" playsinline muted loop autoplay></video>
+        <video src="Video2.mov" playsinline muted loop autoplay></video>
+        <video src="Video3.mov" playsinline muted loop autoplay></video>
+        <video src="Video4.mov" playsinline muted loop autoplay></video>
+        <video src="Video5.mov" playsinline muted loop autoplay></video>
+        <video src="Video6.mov" playsinline muted loop autoplay></video>
         <img src="photo1.jpg" alt="photo">
         <img src="photo2.jpg" alt="photo">
         <img src="photo3.jpg" alt="photo">
@@ -98,18 +97,20 @@
         <img src="photo10.JPG" alt="photo">
         <img src="photo11.jpg" alt="photo">
         <img src="photo12.jpg" alt="photo">
-        <video src="Video7.mov" muted loop autoplay></video>
-        <video src="Video8.mov" muted loop autoplay></video>
-        <video src="Video9.mov" muted loop autoplay></video>
-        <video src="Video10.mov" muted loop autoplay></video>
+        <video src="Video7.mov" playsinline muted loop autoplay></video>
+        <video src="Video8.mov" playsinline muted loop autoplay></video>
+        <video src="Video9.mov" playsinline muted loop autoplay></video>
+        <video src="Video10.mov"playsinline muted loop autoplay></video>
 
       </div>
 
       <div class="line"></div>
 
       <div class="kontakt" id="3">
-        <h2>Jeśli jestes zainteresowany wynajeciem nas</h2>
-        <p>Skontaktuj sie pod numer: 515 255 477 lub napisz na e-mile: hak73@op.pl</p>
+        <h2>Jeśli jesteś zainteresowany</h2>
+        <p>Umów się na spotkanie</p>
+        <p>515 255 477</p>
+        <p>hak73@op.p</p>
       </div>
 
       <div class="line"><p>Autor© 2022</p></div>
