--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2 class="logo">DJ KLASER</h2>
             <div class="toggle"></div>
           </header>
-          <video src="Untitled.mov" muted loop autoplay></video>
+          <video src="Untitled.mov" playsinline muted loop autoplay></video>
           <div class="overlay"></div>
           <div class="text">
             <h2>DJ KLASER</h2> 
