--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <div class="photo">
           <img src="ME.jpg" alt="Me" class="photo_none">
           <img src="ME2.jpg" alt="Me">
+          <img src="ME3.jpg" alt="Me">
+          <img src="ME4.jpg" alt="Me">
         </div>
           <div class="opis">
             <h1>O MNIE</h1>
