--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>DJ KLASER</h2> 
             <h3>TEN WIECZOR JEST NASZ</h3>
             <p>Profesionale prowadzenie imprez okolicznściowych, oprawa muzyczna</p>
-            <a href="#4">Kontakt</a>
+            <a href="#3">Kontakt</a>
           </div>
         </section>
 
@@ -37,7 +37,7 @@
         </div>
       </div>
 
-      <div class="line" id="4"></div>
+      <div class="line"></div>
       
       <div class="main" >
         <div class="box photo1">
