--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="text">
             <h2>DJ KLASER</h2> 
             <h3>TEN WIECZOR JEST NASZ</h3>
-            <p>Profesionale prowadzenie imprez okolicznściowych, oprawa muzyczna</p>
+            <p>Profesjonalne prowadzenie imprez okolicznściowych, oprawa muzyczna</p>
             <a href="#3">Kontakt</a>
           </div>
         </section>
@@ -42,16 +42,16 @@
       <div class="main" >
         <div class="box photo1">
           <img src="dj-mixer.png" alt="dj-mixer">
-          <h2>Sperzęt</h2>
-          <p>Profesionalny sprzęt DENON-DJ</p>
-          <p>Ngłośnienie Turbosound IP3000</p>
+          <h2>Sprzęt</h2>
+          <p>Profesjonalny sprzęt DENON-DJ</p>
+          <p>Nagłośnienie Turbosound IP3000</p>
           <p>Oświetlenie Ligh4ME</p>
         </div>
 
         <div class="box photo2">
           <img src="disco-ball.png" alt="disco-ball">
           <h2>Impreza</h2>
-          <p>Dla Ciebie przygotuje plan imprezy, zgodnie z twoimi wytycznymi, perferencjami muzycznymi, by impreza pozostała w pamięci na wieki.</p>
+          <p>Dla Ciebie przygotuję plan imprezy, zgodnie z Twoimi perferencjami muzycznymi, by impreza pozostała w pamięci na wieki.</p>
         </div>
         
         <div class="box photo3">
@@ -103,7 +103,6 @@
         <video src="Video8.mov" playsinline muted loop autoplay></video>
         <video src="Video9.mov" playsinline muted loop autoplay></video>
         <video src="Video10.mov"playsinline muted loop autoplay></video>
-
       </div>
 
       <div class="line"></div>
