--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="box photo2">
           <img src="disco-ball.png" alt="disco-ball">
           <h2>Impreza</h2>
-          <p>Dla Ciebie przygotuję plan imprezy, zgodnie z Twoimi perferencjami muzycznymi, by impreza pozostała w pamięci na wieki.</p>
+          <p>Dla Ciebie przygotuje plan imprezy, zgodnie z Twoimi perferencjami muzycznymi, by impreza pozostała w pamięci na wieki.</p>
         </div>
         
         <div class="box photo3">
