--- a/index.html
+++ b/index.html
@@ -102,15 +102,13 @@
     <div class="line" id="4">Galeria</div> <!-- GALERIA -->
 
     <div class="galeria">
-      <video src="gifs/Video1.mov" playsinline muted loop autoplay></video>
-      <video src="gifs/Video2.mov" playsinline muted loop autoplay></video>
-      <video src="gifs/Video3.mov" playsinline muted loop autoplay></video>
+      <video src="gifs/Video9.mov" playsinline muted loop autoplay></video>
+      <video src="gifs/Video8.mov" playsinline muted loop autoplay></video>
+      <video src="gifs/Video7.mov" playsinline muted loop autoplay></video>
       <video src="gifs/Video4.mov" playsinline muted loop autoplay></video>
       <video src="gifs/Video5.mov" playsinline muted loop autoplay></video>
+      <video src="gifs/Video3.mov" playsinline muted loop autoplay></video>
       <video src="gifs/Video6.mov" playsinline muted loop autoplay></video>
-      <video src="gifs/Video7.mov" playsinline muted loop autoplay></video>
-      <video src="gifs/Video8.mov" playsinline muted loop autoplay></video>
-      <video src="gifs/Video9.mov" playsinline muted loop autoplay></video>
       <video src="gifs/Video10.mov" playsinline muted loop autoplay></video>
     </div>
 
@@ -146,7 +144,7 @@
     </div>
     
 
-    <div class="line"><p>Autor© 2022</p></div>
+    <div class="line d"><p>Autor© 2022</p></div>
     <footer>
       <p>hak73@op.pll</p>
       <p>515 255 477</p>
